// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders a default header while user is defined  1`] = `
<body>
  <div>
    <header>
      <div
        class="sc-dlnjwi czjjER"
      >
        <div>
          <svg
            class="sc-gtsrHT fNKQCe"
            height="32"
            viewBox="0 0 32 32"
            width="32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill="none"
              fill-rule="evenodd"
            >
              <path
                d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
                fill="#FFF"
              />
              <path
                d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
                fill="#555AB9"
              />
              <path
                d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
                fill="#91BAF8"
              />
            </g>
          </svg>
          <h1
            class="sc-hKFxyN fFmBQZ"
            font-size="20"
            font-weight="800"
          >
            Acme
          </h1>
        </div>
        <div>
          <button
            class="sc-bdnxRM dTEMSW"
          >
            Log out
          </button>
        </div>
      </div>
    </header>
  </div>
</body>
`;

exports[`Button renders a default header while user is underfined 1`] = `
<body>
  <div>
    <header>
      <div
        class="sc-dlnjwi czjjER"
      >
        <div>
          <svg
            class="sc-gtsrHT fNKQCe"
            height="32"
            viewBox="0 0 32 32"
            width="32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill="none"
              fill-rule="evenodd"
            >
              <path
                d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
                fill="#FFF"
              />
              <path
                d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
                fill="#555AB9"
              />
              <path
                d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
                fill="#91BAF8"
              />
            </g>
          </svg>
          <h1
            class="sc-hKFxyN fFmBQZ"
            font-size="20"
            font-weight="800"
          >
            Acme
          </h1>
        </div>
        <div>
          <button
            class="sc-bdnxRM dTEMSW"
          >
            Log in
          </button>
          <button
            class="sc-bdnxRM fVYaCq"
          >
            Sign up
          </button>
        </div>
      </div>
    </header>
  </div>
</body>
`;
